--- a/edu/templates/edu/homework.html
+++ b/edu/templates/edu/homework.html
@@ -1,8 +1,10 @@
 {% extends 'edu/base.html' %} 
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 
 <div class="container">
+    {% if not homework_done %}
     <table class="table table-striped table-bordered table-hover table-dark">
         <thead>
             <tr>
@@ -27,7 +29,11 @@
                 <td>
                     <a href="#">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" checked id="1">
+                            {% if homework.is_finished %}
+                                <input class="form-check-input" type="checkbox" value="" checked>
+                            {% else %}
+                                <input class="form-check-input" type="checkbox" value="">
+                            {% endif %}
                             <label class="form-check-label text-light" for="flexCheckDefault">
                                 Mark as Completed
                             </label>
@@ -39,12 +45,16 @@
             {% endfor %}
         </tbody>
     </table>
+    {% else %}
     <h4>All homeworks are completed!! Create to have more!!</h4>
 </div>
+{% endif %}
 <div class=" container">
     <form method="POST">
+        {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Create Homework</legend>
+            {{form|crispy}}
         </fieldset>
         <div class="form-group">
             <button href="" class="btn btn-outline-info" type="submit">
