Saving to GitHub

--- a/edu/templates/edu/homework.html
+++ b/edu/templates/edu/homework.html
@@ -27,7 +27,7 @@
                 <td>{{homework.due}}</td>
 
                 <td>
-                    <a href="#">
+                    <a href="{% url 'update-homework' homework.id %}">
                         <div class="form-check">
                             {% if homework.is_finished %}
                                 <input class="form-check-input" type="checkbox" value="" checked>
@@ -40,7 +40,7 @@
                         </div>
                     </a>
                 </td>
-                <td><a href="{% url 'delete_homework' homework.id %}"><i class="fa fa-trash fa-2x"></i></a></td>
+                <td><a href="{% url 'delete-homework' homework.id %}"><i class="fa fa-trash fa-2x"></i></a></td>
             </tr>
             {% endfor %}
         </tbody>
