--- a/edu/templates/edu/notes.html
+++ b/edu/templates/edu/notes.html
@@ -7,11 +7,11 @@
     <div class="row">
         {% for note in notes %}
         <div class="col-md-3">
-            <a href="{% url 'notes_detail' note.id %}">
+            <a href="{% url 'notes-detail' note.id %}">
                 <div class="card">
                     <div class="card-header">{{note.title}}</div>
                     <div class="card-body">{{note.description|slice:"0:100"}}</div>
-                    <div class="card-footer mt-auto "><a href="{% url 'delete_note' note.id %}">
+                    <div class="card-footer mt-auto "><a href="{% url 'delete-note' note.id %}">
                         <i class="fa fa-trash fa-2x"></i></a>
                     </div>
                 </div>
