--- a/edu/templates/edu/youtube.html
+++ b/edu/templates/edu/youtube.html
@@ -1,10 +1,12 @@
 {% extends 'edu/base.html' %} 
-{% load static %} 
+{% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 <section class='text-center container'>
     <h2>Search Videos in Youtube</h2>
     <p>search videos and select any video to open in youtube</p>
     <form action="" method="post">
+        {{form|crispy}}
         <input class="btn btn-danger" type="submit" value="Submit">
     </form><br>
 
