--- a/edu/templates/edu/homework.html
+++ b/edu/templates/edu/homework.html
@@ -29,7 +29,7 @@
                 <td>
                     <a href="{% url 'update-homework' homework.id %}">
                         <div class="form-check">
-                            {% if homework.is_finished %}
+                            {% if homework.is_finished == True %}
                                 <input class="form-check-input" type="checkbox" value="" checked>
                             {% else %}
                                 <input class="form-check-input" type="checkbox" value="">
