--- a/edu/templates/edu/conversion.html
+++ b/edu/templates/edu/conversion.html
@@ -1,9 +1,13 @@
 {% extends 'edu/base.html' %} 
-{% load static %} 
+{% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class="container text-center">
     <form method="POST">
+        {% csrf_token %}
         <div class="form-group">
+            <legend class="border-bottom mb-4"></legend>
+            {{form|crispy}}
             <button href="" class="btn btn-outline-info" type="submit">
                 Select
             </button>
