--- a/edu/templates/edu/login.html
+++ b/edu/templates/edu/login.html
@@ -6,20 +6,19 @@
   <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Join Today ?? Please, Register!</legend>
+      <legend class="border-bottom mb-4">Log In</legend>
       {{form|crispy}}
     </fieldset>
     <div class="form-group">
       <button href="" class="btn btn-outline-info" type="submit">
-        Sign Up
+        Sign In
       </button>
     </div>
   </form>
   <div class="border-top pt-3">
-    <small class="text-muted">Already have an account?
-      <a class="ml-2" href="{% url 'login' %}"><strong style="color: blue">Sign In</strong></a>
+    <small class="text-muted">Need an Account?
+      <a class="ml-2" href="{% url 'register' %}"><strong style="color: blue">Create an Account</strong></a>
     </small>
   </div>
 </div>
-
 {% endblock content %}
