Saving to GitHub

--- a/edu/templates/edu/home.html
+++ b/edu/templates/edu/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <section class="container text-center">
-  <h3>Welcome</h3>
+  <h3>Welcome <strong style="color: red">{{user.username}}</strong></h3>
 
   <hr> <br>
   <div class="row">
