--- a/edu/templates/edu/base.html
+++ b/edu/templates/edu/base.html
@@ -55,7 +55,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Logout</a>
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'register' %}">Register</a>
