--- a/edu/static/css/main.css
+++ b/edu/static/css/main.css
@@ -21,7 +21,7 @@ footer {
 
 .navbar {
     background-color: rgb(0, 0, 0) !important;
-    /* background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%) !important; */
+    background: linear-gradient(to bottom, #3d3e3f91 0%, #0a01016e 100%) !important;
 }
 
 .card {
@@ -105,11 +105,11 @@ a:hover {
     height: 210px;
 }
 
-/* .card:hover {
+.card:hover {
     opacity: 0.9;
     transform: scale(1.02);
     transition: 0.5s ease;
-} */
+}
 
 html,
 body {
@@ -121,7 +121,7 @@ body {
 
 body {
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(255, 255, 255, 0.5));
-    /*background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%)*/
+    background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
     overflow-x: hidden;
     background-repeat: no-repeat;
 }
